--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ nav i {
   padding: 10px;
   font-size: 25px;
   color: white;
+  opacity: 0.7;
   visibility: hidden;
   transition: visibility 0.3s ease;
 }
@@ -330,7 +331,7 @@ main .right {
 
   main {
     flex-direction: column;
-    padding: 20px;
+    padding: 10px;
   }
   main .left {
     padding-left: 0;
@@ -353,10 +354,6 @@ main .right {
 
   .cv-left-menu {
     display: none;
-  }
-
-  main .right {
-    padding: 10px;
   }
 
   .right div h3 {
