--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,37 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   position: relative;
+  background: #f3f3f3;
 }
 nav {
   background: #f3f3f3;
   color: white;
   position: sticky;
   top: 0;
-  display: none;
   padding: 0px 15px;
+  display: none;
 }
+nav .nav-links {
+  display: flex;
+}
+
+nav .nav-links a {
+  text-decoration: none;
+  color: teal;
+  display: block;
+  padding: 10px;
+  font-weight: bolder;
+}
+nav .nav-links a:hover {
+  background: teal;
+  color: white;
+}
+
+nav .nav-links a.active {
+  background: teal;
+  color: white;
+}
+
 nav i {
   padding: 5px;
   cursor: pointer;
@@ -100,7 +122,7 @@ nav i {
 }
 
 /* Name */
-.name {
+.header-title {
   width: 100%;
   height: 60px;
   background: teal;
@@ -111,10 +133,10 @@ nav i {
   color: white;
   padding: 15px;
 }
-.name h2 {
+.header-title h2 {
   padding: 20px;
 }
-.name span {
+.header-title span {
   color: #000;
 }
 
@@ -125,10 +147,6 @@ main {
   padding: 20px 50px;
   display: flex;
 }
-
-/* section {
-  border: 2px solid black;
-} */
 
 /* Left CV */
 
@@ -314,14 +332,15 @@ main .right {
 @media (max-width: 900px) {
   nav {
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: space-between;
   }
 
   /* Name */
-  .name {
+  .header-title {
     font-size: 32px;
   }
-  .name h2 {
+  .header-title h2 {
     padding: 10px;
   }
 
@@ -366,10 +385,10 @@ main .right {
     width: 70%;
   }
   /* Name */
-  .name {
+  .header-title {
     font-size: 22px;
   }
-  .name h2 {
+  .header-title h2 {
     padding: 5px;
   }
   .cv-left-personal-info {
@@ -394,10 +413,10 @@ main .right {
     font-size: 14px;
   }
   /* Name */
-  .name {
+  .header-title {
     font-size: 18px;
   }
-  .name h2 {
+  .header-title h2 {
     padding: 3px;
   }
   .cv-left-personal-info {
