--- a/css/contact.css
+++ b/css/contact.css
@@ -58,6 +58,25 @@ section form button i {
 section form input.error {
   border: 1px solid red;
 }
+section form .alert {
+  margin: 15px 0;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+  display: none;
+}
+
+section form .alert.success {
+  background: darkgreen;
+  color: white;
+  display: block;
+}
+section form .alert.error {
+  background: darkred;
+  color: white;
+  display: block;
+}
 
 /* media query for tables */
 @media (max-width: 900px) {
@@ -72,5 +91,45 @@ section form input.error {
 @media (max-width: 900px) {
   section form {
     width: 90%;
+  }
+}
+
+/* SPINNER */
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: teal;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%,
+  100% {
+    top: 24px;
+    height: 32px;
   }
 }
