--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ nav {
   color: white;
   position: sticky;
   top: 0;
-  padding: 0px 15px;
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
 }
 nav .nav-links {
   display: flex;
@@ -31,6 +33,7 @@ nav .nav-links a {
   display: block;
   padding: 10px;
   font-weight: bolder;
+  line-height: 30px;
 }
 nav .nav-links a:hover {
   background: teal;
@@ -176,11 +179,12 @@ main .left {
 }
 .cv-left-menu {
   position: sticky;
-  top: 0;
+  top: 48px;
+  margin-left: 5px;
 }
 .cv-left-menu ul {
   list-style: none;
-  margin-left: -20px;
+  margin-left: -12px;
 }
 
 .cv-left-menu ul li {
@@ -218,53 +222,53 @@ main .right {
 }
 
 /* Biography */
-.right .biography p span {
+.biography p span {
   font-weight: bold;
 }
 
 /* Education */
-.right .education p {
+.education p {
   margin-bottom: 20px;
 }
 
 /* Experience */
-.right .experience p {
+.experience p {
   margin-bottom: 20px;
 }
 
 /* Projects */
-.right .projects a:first-child {
+.projects a:first-child {
   color: black;
   text-decoration: none;
 }
 
-.right .projects h4 {
+.projects h4 {
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-.right .projects p {
+.projects p {
   margin-bottom: 10px;
   font-style: italic;
   font-size: 18px;
 }
 
-.right .projects h5 {
+.projects h5 {
   margin-bottom: 10px;
   font-size: 18px;
 }
 
-.right .projects ul {
+.projects ul {
   padding: 10px;
 }
-.right .projects iframe {
+.projects iframe {
   width: 100%;
   height: 350px;
   box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
 }
 
-.right .projects .view {
+.projects .view {
   display: block;
   text-align: center;
   font-size: 18px;
@@ -274,17 +278,17 @@ main .right {
   padding: 10px;
 }
 
-.right .projects .view:hover {
+.projects .view:hover {
   background: rgb(2, 104, 104);
 }
 
 /* hobbies */
 
-.right .hobbies ul {
+.hobbies ul {
   list-style: none;
 }
 
-.right .hobbies ul li:before {
+.hobbies ul li:before {
   content: "\269F";
   margin-right: 10px;
   font-weight: bold;
@@ -293,11 +297,11 @@ main .right {
 
 /* Spoken Languages */
 
-.right .spoken-languages ul {
+.spoken-languages ul {
   list-style: none;
 }
 
-.right .spoken-languages ul li:before {
+.spoken-languages ul li:before {
   content: "\2606";
   margin-right: 10px;
   font-size: 22px;
@@ -306,36 +310,30 @@ main .right {
 
 /* programming-languages */
 
-.right .programming-languages ul {
+.programming-languages ul {
   list-style: none;
 }
 
-.right .programming-languages ul li:before {
+.programming-languages ul li:before {
   content: "\261B";
   margin-right: 10px;
   font-size: 22px;
   font-weight: bold;
 }
 
-/*  */
+/* Reference */
 
-.right .references ul {
+.references ul {
   list-style: none;
 }
 
-.right .references ul li {
+.references ul li {
   margin-bottom: 20px;
 }
 
 /* Media queries */
 
 @media (max-width: 900px) {
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
   /* Name */
   .header-title {
     font-size: 32px;
